feature - user detail

--- a/angular-front/src/app/components/global/card/card/card.component.html
+++ b/angular-front/src/app/components/global/card/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="custom-card2">
+<div class="custom-card">
     <div *ngIf="pictureUrl" class="image-container">
         <img [src]="pictureUrl" [alt]="pictureAlt" [style.height.px]="pictureHeight" [style.width.px]="pictureHeight">
     </div>
