--- a/angular-front/src/app/components/global/section-header/section-header.component.html
+++ b/angular-front/src/app/components/global/section-header/section-header.component.html
@@ -6,6 +6,6 @@
     <img class="section-image" *ngIf="pictureUrl" [src]="pictureUrl" [alt]="pictureAlt">
     <div id="header-text-data">
         <h1>{{title}}</h1>
-        <p>{{description}}</p>
+        <p style="font-weight: 200">{{description}}</p>
     </div>
 </section>
