--- a/angular-front/src/app/components/layout/filters/treeFilter/filters.component.html
+++ b/angular-front/src/app/components/layout/filters/treeFilter/filters.component.html
@@ -2,7 +2,7 @@
     <div id="accordion" class="accordion">
         <div id="filter-buttons-container">
             <div class="accordion-item">
-                <h1 class="accordion-header">
+                <h1 class="accordion-header" style="font-weight: 100;">
                     <button class="accordion-button collapsed bg-warn" type="button" data-bs-toggle="collapse" data-bs-target="#filter-3">
                         <mat-icon class="mat-icon-rtl-mirror">filter_list</mat-icon>
                         Seleccione un filtro:
