course detail subscriptions updates fixed

--- a/angular-front/src/app/pages/detail/detail.component.html
+++ b/angular-front/src/app/pages/detail/detail.component.html
@@ -43,54 +43,6 @@
                     </div>
                 </div>
             </section>
-            <section id="course-lessons" class="custom-container" *ngIf="classesData && classesSectionData">
-                <app-section-header
-                    id="course-lessons-header"
-                    [title]="classesSectionData.title"
-                    [description]="classesSectionData.description"
-                    [icon]="classesSectionData.icon"
-                    [customBackground]="appStyle"
-                >
-                </app-section-header>
-                <button  
-                    id="lessons-see-more" 
-                    (click)="addAction()"
-                    [appCustomBackground]="appStyle" 
-                    mat-raised-button color="primary"
-                    class="my-3"
-                >
-                    <mat-icon>add</mat-icon>
-                    Agregar clase
-                </button>
-                <div class="row">
-                    <div id="lessons" class="col-xl-6" *ngFor="let lesson of classesData; let i = index" style="display: block">
-                        <ng-container>
-                            <div *ngIf="(i%2)">
-                                <app-card
-                                [title]="lesson.title"
-                                [description]="lesson.description"
-                                [icon]="lesson.icon"
-                                [customIconBackground]="secondaryAppStyle"
-                                [editAction]="editAction(lesson.id)"
-                                [deleteAction]="deleteAction(lesson.id)"
-                            >
-                                </app-card>
-                            </div>
-                            <div *ngIf="((i+1)%2) && (i+1 < classesData.length)">
-                                <app-card
-                                    [title]="classesData[i].title"
-                                    [description]="classesData[i].description"
-                                    [icon]="classesData[i].icon"
-                                    [customIconBackground]="secondaryAppStyle"
-                                    [editAction]="editAction(lesson.id)"
-                                    [deleteAction]="deleteAction(lesson.id)"
-                                    >
-                                </app-card>
-                            </div>
-                        </ng-container>
-                    </div>
-                </div>
-            </section>
         </div>
 
         <aside id="course-detail-right" class="col-lg-4">
@@ -107,7 +59,7 @@
                     <ng-container *ngFor="let data of enrollmentData.slice(0,maxEnrollmentsShown)">
                         <div>
                         <app-card
-                            (click)="enrollmentSeeDetailAction(data.id)"
+                            [handleClick]="seeMoreAction(data.academicId)"
                             [title]="data.title"
                             [description]="data.description"
                             [pictureUrl]="data.pictureUrl"
@@ -115,6 +67,7 @@
                             [pictureHeight]="80"
                             [pictureAlt]="data.title"
                             [customIconBackground]="secondaryAppStyle"
+                            [deleteAction]="deleteAction(data.enrollmentId)"
                         >
                     </app-card></div>
                 </ng-container>
