--- a/angular-front/src/app/components/global/card/card/card.component.html
+++ b/angular-front/src/app/components/global/card/card/card.component.html
@@ -1,20 +1,20 @@
 <div class="custom-card">
-    <div *ngIf="pictureUrl" class="image-container">
+    <div (click)="handleClickAction()" *ngIf="pictureUrl" class="image-container">
         <img [src]="pictureUrl" [alt]="pictureAlt" [style.height.px]="pictureHeight" [style.width.px]="pictureHeight">
     </div>
-    <div *ngIf="!pictureUrl && icon" class="icon-container">
+    <div (click)="handleClickAction()" *ngIf="!pictureUrl && icon" class="icon-container">
         <app-bg-icon
             [icon]="icon"
             [customBackground]="customIconBackground"
         >
         </app-bg-icon>
     </div>
-    <div class="custom-card-text" [style.marginLeft.px]="editAction ? 40 : 0">
+    <div (click)="handleClickAction()" class="custom-card-text" [style.marginLeft.px]="((editAction || deleteAction) && icon) ? 40 : 0">
         <h3>{{title}}</h3>
         <p>{{description}}</p>
     </div>
-    <div class="custom-card-actions" *ngIf="editAction && deleteAction">
-        <div class="edit-button">
+    <div class="custom-card-actions" *ngIf="editAction || deleteAction">
+        <div class="edit-button" *ngIf="editAction">
             <button
                 mat-icon-button
                 (click)="editAction()"
@@ -22,7 +22,7 @@
                 <mat-icon>edit</mat-icon>
             </button>
         </div>
-        <div class="delete-button">
+        <div class="delete-button" *ngIf="deleteAction">
             <button
                 mat-icon-button
                 (click)="deleteAction()"
