--- a/angular-front/src/app/pages/user-detail/user-detail.component.html
+++ b/angular-front/src/app/pages/user-detail/user-detail.component.html
@@ -24,13 +24,13 @@
                     </div>
                     <div class="col-6 mb-3">
                       <h6>Teléfono</h6>
-                      <p class="text-muted">{{user?.phone ?? '-'}}</p>
+                      <p class="text-muted">{{user.phone ?? '-'}}</p>
                     </div>
                   </div>
                   <div class="row pt-1">
                     <div class="col-6 mb-3">
                       <h6>Ubicación</h6>
-                      <p class="text-muted">{{user?.direction}}</p>
+                      <p class="text-muted">{{user.direction}}</p>
                     </div>
                   </div>
                 </div>
