feature - add inscription

--- a/angular-front/src/app/pages/course-detail/course-detail/course-detail.component.html
+++ b/angular-front/src/app/pages/course-detail/course-detail/course-detail.component.html
@@ -8,6 +8,7 @@
     [enrollmentData]="getEnrollmentData(course)"
     [enrollmentSeeDetailAction]="getEnrollmentSeeDetailAction()"
     [enrollmentSeeMoreAction]="getEnrollmentSeeMoreAction()"
+    [filterableId]="{courseId: course.id}"
     [doughnutSectionData]="getDoughnutSectionData(course)"
     [doughnutData]="getDoughnutData(course)"
     [appStyle]="'linear-main'"
