--- a/angular-front/src/app/pages/student-detail/student-detail/student-detail.component.html
+++ b/angular-front/src/app/pages/student-detail/student-detail/student-detail.component.html
@@ -8,6 +8,7 @@
     [enrollmentData]="getEnrollmentData(student)"
     [enrollmentSeeMoreAction]="getEnrollmentSeeMoreAction()"
     [enrollmentSeeDetailAction]="getEnrollmentSeeDetailAction()"
+    [filterableId]="{studentId: student.id}"
     [doughnutSectionData]="getDoughnutSectionData(student)"
     [doughnutData]="getDoughnutData(student)"
     [appStyle]="'linear-main'"
