--- a/angular-front/src/app/pages/error404/error404.component.html
+++ b/angular-front/src/app/pages/error404/error404.component.html
@@ -1,1 +1,15 @@
-<p>error404 works!</p>
+<style>
+    #error404 {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 50px;
+        font-weight: bold;
+        background-color: #f5f5f5;
+    }
+</style>
+<div id="error404">
+    <p>error404</p>
+</div>
