--- a/angular-front/src/app/components/global/toolbar/toolbar.component.html
+++ b/angular-front/src/app/components/global/toolbar/toolbar.component.html
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a [appFontSize]="'medium'" class="nav-link">{{currentRoute}}</a>
+          <a [appFontSize]="'medium'" class="nav-link">{{getCurrentPage()}}</a>
         </li>
       </ul>
       <div class="d-flex">
