entrega final - constructor.name failing in production and password shown instead of surname 😳

--- a/angular-front/src/app/components/layout/filters/add-filter-modal/add-filter-modal.component.html
+++ b/angular-front/src/app/components/layout/filters/add-filter-modal/add-filter-modal.component.html
@@ -27,7 +27,7 @@
                 selectedType = getLeafType();   
             "
         >
-            FILTRO
+            Elegir filtro
         </button>
     </div>
     <mat-accordion>
